# esp32-remoteCar

./: .gitignore  CMakeLists.txt  Example with Esp32 - WiFi.ino  LICENSE  README.md  kpl_build.sh  kpl_flash.sh  kpl_monitor.sh  sdkconfig  sdkconfig.default  sdkconfig.defaults
arduino/Esp32_Bluetooth/: Esp32_Bluetooth.ino
doc/: pin_connection.plantuml
esp-idf/: CMakeLists.txt  kpl_build.sh  kpl_flash.sh  kpl_monitor.sh  sdkconfig  sdkconfig.defaults
esp-idf/main/: CMakeLists.txt  ble_spp_server.h  esp32_remoteCar.c  esp32_remoteCar.h  esp32_remoteCar_callback.c  esp32_remoteCar_gap.c  esp32_remoteCar_gatt.c  esp32_remoteCar_inf.h  esp32_remoteCar_priv.h  esp32_remoteCar_pub.h  gatt_svr.c  idf_component.yml  main.c
esp-idf/tutorial/: spp_server_walkthrough.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  sdkconfig.h
